--- a/src/main/resources/templates/create-message.html
+++ b/src/main/resources/templates/create-message.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
+<!-- 문서의 시작 -->
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<!-- 문서의 언어와 사용하는 기능을 설정해주는 속성 -->
 <head>
+<!-- 문서의 머리 -->
 <meta charset="UTF-8">
+<!-- 문자 인코딩 방식 -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- 뷰포트를 설정하기 위한 메타 타입 줄, 그리고 뷰포트의 설정 -->
 <title>새 메세지 작성</title>
+<!-- 말 그대로 타이틀, 웹 페이지 상단에 나오는 문구 -->
 <link rel="stylesheet" th:href="@{/css/messages.css}">
+<!--  -->
 </head>
 <body>
 	<div class="container">
