--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Messages</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 	<!-- 비어 있는 messages div -->
@@ -10,6 +11,7 @@
 	<div id="loading_id" class="loading">Loading...</div>
 	<div id="error_id" class="error">fetching 과정에서 오류가 발생했습니다.</div>
 	<ul id="messageList_id"></ul>
+	<button onclick="fetchMessages()">목록보기</button>
 	
 	<!-- 자바스크립트로 fetch를 이용해 /messages/api 결과를 위 div에 담는다. -->
 	<script th:inline="javascript">
@@ -35,7 +37,9 @@
 					loading.style.display = 'none';
 					messages.forEach(msg => {
 						const li = document.createElement('li');
-						li.textContent = `${msg.message} (${msg.id})`;
+						// li.textContent = `<a href="/messages/${msg.id}">${msg.message} (${msg.id})</a>`;
+						// messageList.appendChild(li);
+						li.innerHTML = `<a href="/messages/${msg.id}">${msg.message} (${msg.id})</a>`;
 						messageList.appendChild(li);
 					})
 				})
@@ -46,5 +50,6 @@
 				})
 		}
 	</script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
